--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <Head>
-<link rel="stylesheet" href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/my_style.css">
+<link rel="stylesheet" href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/my_style.css">
 <link href="https://fonts.googleapis.com/css?family=Open+sans&display=swap" rel="stylesheet">
 </Head>
 <Body>
@@ -14,7 +14,7 @@
 		 
 		  </div>
 		   <div class="small-img">
-		    <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/d20e75e114d0682626bc3bb4d9769ab8.jpg">
+		    <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/d20e75e114d0682626bc3bb4d9769ab8.jpg">
 	         <div class="line-1"></div>
 	  </div>
 	 </div>
@@ -23,11 +23,11 @@
    <div class="right-col">
    <div class="logo-container"></div>
     <div class="navbar">
-	    <li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/index.html" style="text-decoration:none"><font color="black">HOME</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
+	    <li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/index.html" style="text-decoration:none"><font color="black">HOME</a></li>
+		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
+		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
+		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
+		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
 	   </ul>
 	</div>
 	 <div class="golden-bar"><span></span></div>
@@ -38,19 +38,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/jane-eyre.jpg" width="323px" height="500px">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/jane-eyre.jpg" width="323px" height="500px">
   
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/41qNt+dfjKL.jpg" width="323px" height="500px">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/f5f8a6e3ed583a74d51970426373910b.jpg" width="323px" height="500px">
   
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/f5f8a6e3ed583a74d51970426373910b.jpg"width="323px" height="500px">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/41qNt+dfjKL.jpg"width="323px" height="500px">
  
 </div>
 </div>
