--- a/book1.html
+++ b/book1.html
@@ -1,17 +1,17 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/new%201.css">
+<link rel="stylesheet" href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/new%201.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <nav>
     <ul class="navbar">
-	  <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/index.html"/>Home</a></li>
-	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/book1.html">Book</a></li>
-	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/19th.html"/>19th Century Book</a></li>
-	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/delivery.html"/>Delivery</a></li>
-	    <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/contact_us.html"/>Contact us</a></li>
+	  <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/index.html"/>Home</a></li>
+	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/book1.html">Book</a></li>
+	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/19th.html"/>19th Century Book</a></li>
+	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.html"/>Delivery</a></li>
+	    <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/contact_us.html"/>Contact us</a></li>
 	 </ul>
 	</nav>
 
@@ -19,11 +19,11 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/page_1-724x1024.jpg" width="300" height="450">
+      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/page_1-724x1024.jpg" width="300" height="450">
     </div>
     <div class="flip-card-back">
 	 <div class="back-header">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/page_1-724x1024.jpg" width="234" height="216">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/page_1-724x1024.jpg" width="234" height="216">
   <div class="back-content">
   <h1>by J.R.R. Tolkien (Author)</h1>
 Illustrated, August 14, 2012
@@ -48,11 +48,11 @@ Language: English<br>Print-length: 1216 pages<br>Publisher: William Morrow Paper
 <div class="flip-card1">
   <div class="flip-card-inner1">
     <div class="flip-card-front1">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/download%20(1).jpeg" width="300" height="450">
+      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download%20(1).jpeg" width="300" height="450">
     </div>
     <div class="flip-card-back1">
 	 <div class="back-header1">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/download%20(1).jpeg" width="234" height="216">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download%20(1).jpeg" width="234" height="216">
   <div class="back-content1">
   <h1>by Hilary Mantel (Author)</h1>
 Illustrated, Oct 13, 2009
@@ -76,11 +76,11 @@ Language: English<br>Print-length: 614 pages<br>Publisher: Henry Holt and Co.
 <div class="flip-card2">
   <div class="flip-card-inner2">
     <div class="flip-card-front2">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/download.jpeg" width="300" height="450">
+      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download.jpeg" width="300" height="450">
     </div>
     <div class="flip-card-back2">
 	 <div class="back-header2">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/download.jpeg" width="234" height="216">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download.jpeg" width="234" height="216">
   <div class="back-content2">
   <h1>by J.K. Rowling (Author)</h1>
 Illustrated, July 25, 2017
@@ -104,11 +104,11 @@ Language: English<br>Print-length: 336 pages<br>Reading Age: 9+ years
 <div class="flip-card3">
   <div class="flip-card-inner3">
     <div class="flip-card-front3">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/43f8f3b4ea77b57d42ee861e98714487.jpg_720x720q80.jpg" width="300" height="450">
+      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/43f8f3b4ea77b57d42ee861e98714487.jpg_720x720q80.jpg" width="300" height="450">
     </div>
     <div class="flip-card-back3">
 	 <div class="back-header3">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/43f8f3b4ea77b57d42ee861e98714487.jpg_720x720q80.jpg" width="234" height="216">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/43f8f3b4ea77b57d42ee861e98714487.jpg_720x720q80.jpg" width="234" height="216">
   <div class="back-content3">
   <h1>by Antoine de Saint-Exupery (Author)</h1>
 Illustrated, May 15, 2000
@@ -132,11 +132,11 @@ Language: English and French<br>Part of series: 1st opart<br>Reading Age: 4+ yea
 <div class="flip-card4">
   <div class="flip-card-inner4">
     <div class="flip-card-front4">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/images.jpeg" width="300" height="450">
+      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/images.jpeg" width="300" height="450">
     </div>
     <div class="flip-card-back4">
 	 <div class="back-header4">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/images.jpeg" width="234" height="216">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/images.jpeg" width="234" height="216">
   <div class="back-content4">
   <h1>by Stephen King (Author)</h1>
 Illustrated, May 15, 2000
@@ -160,11 +160,11 @@ Language: English<br>#1 Best Seller<br>Supernatural Thrillers
 <div class="flip-card5">
   <div class="flip-card-inner5">
     <div class="flip-card-front5">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/download%20(2).jpeg" width="300" height="450">
+      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download%20(2).jpeg" width="300" height="450">
     </div>
     <div class="flip-card-back5">
 	 <div class="back-header5">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/download%20(2).jpeg" width="234" height="216">
+  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download%20(2).jpeg" width="234" height="216">
   <div class="back-content5">
   <h1>by Celeste Ng (Author)</h1>
 Publish, Oct 04, 2022
