--- a/delivery.html
+++ b/delivery.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-<link rel="stylesheet" href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/delivery.css">
+<link rel="stylesheet" href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.css">
 </head>
 <body>
     <div class="logo-container"></div><div class="logo">T-Emblemy</div>
        <div class="navbar">
 	   <ul>
-	    <li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/index.html" style="text-decoration:none"><font color="black">HOME</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t_emblemy1.github.io/contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
+	    <li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/index.html" style="text-decoration:none"><font color="black">HOME</a></li>
+		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
+		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
+		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
+		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
 	   </ul>
 	</div>
 	
@@ -135,8 +135,8 @@ Delivesse provides national and international express delivery.</p>
   <hr>
 <br>
  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29628.755779758743!2d57.47138132741679!3d-20.263934651829537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x217c5b16ba22f92f%3A0x2aae80fb90ff533b!2sLa%20City%20Trianon!5e0!3m2!1sen!2smu!4v1692474130930!5m2!1sen!2smu" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
- 
+</div>
+</div>
  
 
 
