--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <Head>
-<link rel="stylesheet" href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/my_style.css">
+<link href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/my_style.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Open+sans&display=swap" rel="stylesheet">
 </Head>
 <Body>
