--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		 
 		  </div>
 		   <div class="small-img">
-		    <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/d20e75e114d0682626bc3bb4d9769ab8.jpg">
+		    <img src="d20e75e114d0682626bc3bb4d9769ab8.jpg">
 	         <div class="line-1"></div>
 	  </div>
 	 </div>
