--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/jane-eyre.jpg" width="323px" height="500px">
+  <img src="jane-eyre.jpg" width="323px" height="500px">
   
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/f5f8a6e3ed583a74d51970426373910b.jpg" width="323px" height="500px">
+  <img src="f5f8a6e3ed583a74d51970426373910b.jpg" width="323px" height="500px">
   
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/41qNt+dfjKL.jpg"width="323px" height="500px">
+  <img src="41qNt+dfjKL.jpg"width="323px" height="500px">
  
 </div>
 </div>
