--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
    <div class="right-col">
    <div class="logo-container"></div>
     <div class="navbar">
-	    <li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/index.html" style="text-decoration:none"><font color="black">HOME</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
+	    <li><a href="index.html" style="text-decoration:none"><font color="black">HOME</a></li>
+		<li><a href="book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
+		<li><a href="19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
+		<li><a href="delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
+		<li><a href="contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
 	   </ul>
 	</div>
 	 <div class="golden-bar"><span></span></div>
