--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <Head>
-<link rel="stylesheet" href="my_style.css"  type="text">
+<link rel="stylesheet" href="index.css"  type="text">
 </Head>
 <Body>
  <div class="hero">
