--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <Head>
-<link rel="stylesheet" href="index.css"  type="text"/>
+<link rel="stylesheet" type="text/css" href="https://github.com/steph250102/t.emblemy.mu.github.io/blob/main/index.css">
 </Head>
 <Body>
  <div class="hero">
