--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <HTML>
 <Head>
+<link href="https://fonts.googleapis.com/css?family=Open+sans&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>	
 <style>*
 {
 	margin: 0;
