--- a/index.html
+++ b/index.html
@@ -452,8 +452,32 @@ function showSlides() {
 	  <div class="line-2"><span></span></div>
 	 </div>
 	  </div>
-		
-   
-  </div>
+<br><br><br>
+   <div class="history">
+	<p>Our History<p>
+</div>
+<br>
+	<p><center><i><b>T-Emblemy Collectible Books has been selling rare, used classic fiction from its store in
+    Mayfair for 40 years.
+  <br>So to help more people in finding the perfect book, we decided to expand our services online.
+  <br>The goal is also to share the passion of collectible books.The shop implements all kinds of variety of books<br>
+  from the most recent to the oldest and rarest books.Our motto is:<br><font color="FF6347"><q>Reading is a conversation.<br>
+  All books talk.<br>
+  But a good book listens as well.</font></q></b></i></p></center>
+   </div>
+ <br>
+<footer>
+ <div class="footer">
+  &ensp;&ensp;&ensp;Our social media
+   <br><br><br>
+   <center>
+	 <a href="#" class="fa fa-facebook"> Ze_Emblemy</a>&ensp;&ensp;
+     <a href="#" class="fa fa-twitter"> temblemy@10</a>&ensp;&ensp;
+     <a href="#" class="fa fa-instagram"> t_emblemy</a>&ensp;&ensp;
+	 <a href="#" class="fa fa-google"> t@emblemy.com</a>&ensp;&ensp;
+	 <a href="#" class="fa fa-rss"> 236 789 69</a>
+  </center>
+</div>
+</footer>
 </Body>
 </HTML>
