--- a/contact_us.html
+++ b/contact_us.html
@@ -32,7 +32,7 @@
 .logo-container {
   width: 100px;
   height: 90px;
-  background-image: url("C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/Screenshot%202023-07-25%20230015.png");
+  background-image: url("Screenshot%202023-07-25%20230015.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -230,11 +230,11 @@
   <div class="logo-container"></div>
     <div class="navbar">
 	   <ul>
-	    <li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/index.html" style="text-decoration:none"><font color="black">HOME</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
+	    <li><a href="index.html" style="text-decoration:none"><font color="black">HOME</a></li>
+		<li><a href="book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
+		<li><a href="19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
+		<li><a href="delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
+		<li><a href="contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
 	   </ul>
 	</div>
 	</div>	
@@ -265,7 +265,7 @@
 </div>
 
 <div class="imgposition">
-<img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/fd3f124e7a4599763127f89bd7b8852c.jpg">
+<img src="fd3f124e7a4599763127f89bd7b8852c.jpg">
 </div>
 
 </body>
