--- a/19th.html
+++ b/19th.html
@@ -3,7 +3,7 @@
 <style>
 	*
 body{
-	background-image: url("file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/kb0Zm.jpg");
+	background-image: url("kb0Zm.jpg");
 }
 .header {
   overflow: hidden;
@@ -180,27 +180,27 @@ html {
  <div class="header">
   <a href="#default" class="logo"><i>T-Emblemy</i></a>
   <div class="header-right">
-    <a class="active" href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/index.html">Home &ensp;&ensp;&ensp;</a>
-    <a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/book1.html">Book&ensp;&ensp;&ensp;</a>
-   <a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/19th.html">19th century&ensp;&ensp;&ensp;</a>
-	<a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.html">Delivery&ensp;&ensp;&ensp;</a>
-	<a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/contact_us.html">Contact us</a>
+    <a class="active" href="index.html">Home &ensp;&ensp;&ensp;</a>
+    <a href="book1.html">Book&ensp;&ensp;&ensp;</a>
+   <a href="19th.html">19th century&ensp;&ensp;&ensp;</a>
+	<a href="delivery.html">Delivery&ensp;&ensp;&ensp;</a>
+	<a href="contact_us.html">Contact us</a>
   </div>
 <br><br>
 
   <div class="mySlides fade">
     <div class="numbertext"></div>
-    <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/00aa0a1630c3063eac43463cd0381379.jpg" width="100%" height="60%">
+    <img src="f00aa0a1630c3063eac43463cd0381379.jpg" width="100%" height="60%">
    </div>
 
   <div class="mySlides fade">
     <div class="numbertext"></div>
-    <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/anno-1800-1800s-digital-art-concept-art-ship-hd-wallpaper-preview.jpg" width="100%" height="60%">
+    <img src="anno-1800-1800s-digital-art-concept-art-ship-hd-wallpaper-preview.jpg" width="100%" height="60%">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext"></div>
-    <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/OIP%20(1).jpeg" width="100%" height="60%">
+    <img src="OIP%20(1).jpeg" width="100%" height="60%">
   </div>
 
 <div style="text-align:center">
@@ -231,7 +231,7 @@ function showSlides() {
 <div class="row">
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/jane-eyre.jpg" alt="Jane" width="300px" height="300px"></center>
+      <center><img src="jane-eyre.jpg" alt="Jane" width="300px" height="300px"></center>
       <div class="container">
 	    <h2>Jane Eyre</h2>
         <p class="title">Written by: Charlotte Bronte
@@ -250,7 +250,7 @@ function showSlides() {
 
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/41qNt+dfjKL.jpg" alt="Franky" width="300px" height="300px"></center>
+      <center><img src="41qNt+dfjKL.jpg" alt="Franky" width="300px" height="300px"></center>
       <div class="container">
         <h2>Frankenstein</h2>
         <p class="title">Written by: Mary Shelley
@@ -269,7 +269,7 @@ function showSlides() {
 
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/f5f8a6e3ed583a74d51970426373910b.jpg" alt="Myths" width="300px" height="300px"></center>
+      <center><img src="f5f8a6e3ed583a74d51970426373910b.jpg" alt="Myths" width="300px" height="300px"></center>
       <div class="container">
        <h2>The Myths of Greece and Rome</h2>
         <p class="title">Written by: H.A. Guerber Courier
@@ -291,7 +291,7 @@ function showSlides() {
 <div class="row">
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/pride-and-prejudice-1946.jpg" alt="book5" width="300px" height="300px"></center>
+      <center><img src="pride-and-prejudice-1946.jpg" alt="book5" width="300px" height="300px"></center>
       <div class="container">
 	    <h2>Pride and Prejudice</h2>
         <p class="title">Written by: Jane Austen
@@ -310,7 +310,7 @@ function showSlides() {
 
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/OC_LIND_REXROTH_BF_001.jpg" alt="book6" width="300px" height="300px"></center>
+      <center><img src="OC_LIND_REXROTH_BF_001.jpg" alt="book6" width="300px" height="300px"></center>
       <div class="container">
         <h2>American Poetry in the Twenties Centuries</h2>
         <p class="title">Written by: Kenneth Rexroth
@@ -329,7 +329,7 @@ function showSlides() {
 
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/9780415825122.jpg" alt="book7" width="300px" height="300px"></center>
+      <center><img src="9780415825122.jpg" alt="book7" width="300px" height="300px"></center>
       <div class="container">
        <h2>The Road to Freedom</h2>
         <p class="title">Written by: Catherine Clinton
@@ -351,7 +351,7 @@ function showSlides() {
 <div class="row">
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/Long-Lost-Friend-1.jpg" width="300px" height="300px"></center>
+      <center><img src="Long-Lost-Friend-1.jpg" width="300px" height="300px"></center>
       <div class="container">
 	    <h2>Long Lost Friend</h2>
         <p class="title">Written by: J.George Hohman
@@ -371,7 +371,7 @@ function showSlides() {
 
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/81KH7WJpvAL._AC_UF1000,1000_QL80_.jpg" alt="book8" width="300px" height="300px"></center>
+      <center><img src="81KH7WJpvAL._AC_UF1000,1000_QL80_.jpg" alt="book8" width="300px" height="300px"></center>
       <div class="container">
         <h2>Dracula</h2>
         <p class="title">Written by: Bram Stoker
@@ -390,7 +390,7 @@ function showSlides() {
 
   <div class="column">
     <div class="card">
-      <center><img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/main-qimg-a377401cdfdfbddb444074eb27262c88-lq.jpeg" alt="book9" width="300px" height="300px"></center>
+      <center><img src="main-qimg-a377401cdfdfbddb444074eb27262c88-lq.jpeg" alt="book9" width="300px" height="300px"></center>
       <div class="container">
        <h2>The Transformation of the World</h2>
         <p class="title">Written by: Jurgen Osterhammel
