--- a/book1.html
+++ b/book1.html
@@ -5,7 +5,7 @@
 <style>
 	body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/original-b62d8408b6d7d0199a03cd792e04266f.png");
+  background-image: url("original-b62d8408b6d7d0199a03cd792e04266f.png");
 }
 
  ul.navbar{
@@ -472,11 +472,11 @@
 <body>
 <nav>
     <ul class="navbar">
-	  <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/index.html"/>Home</a></li>
-	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/book1.html">Book</a></li>
-	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/19th.html"/>19th Century Book</a></li>
-	   <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.html"/>Delivery</a></li>
-	    <li class="navitem"><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/contact_us.html"/>Contact us</a></li>
+	  <li class="navitem"><a href="index.html"/>Home</a></li>
+	   <li class="navitem"><a href="book1.html">Book</a></li>
+	   <li class="navitem"><a href="19th.html"/>19th Century Book</a></li>
+	   <li class="navitem"><a href="delivery.html"/>Delivery</a></li>
+	    <li class="navitem"><a href="contact_us.html"/>Contact us</a></li>
 	 </ul>
 	</nav>
 
@@ -484,11 +484,11 @@
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/page_1-724x1024.jpg" width="300" height="450">
+      <img src="page_1-724x1024.jpg" width="300" height="450">
     </div>
     <div class="flip-card-back">
 	 <div class="back-header">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/page_1-724x1024.jpg" width="234" height="216">
+  <img src="page_1-724x1024.jpg" width="234" height="216">
   <div class="back-content">
   <h1>by J.R.R. Tolkien (Author)</h1>
 Illustrated, August 14, 2012
@@ -513,11 +513,11 @@ Language: English<br>Print-length: 1216 pages<br>Publisher: William Morrow Paper
 <div class="flip-card1">
   <div class="flip-card-inner1">
     <div class="flip-card-front1">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download%20(1).jpeg" width="300" height="450">
+      <img src="download%20(1).jpeg" width="300" height="450">
     </div>
     <div class="flip-card-back1">
 	 <div class="back-header1">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download%20(1).jpeg" width="234" height="216">
+  <img src="download%20(1).jpeg" width="234" height="216">
   <div class="back-content1">
   <h1>by Hilary Mantel (Author)</h1>
 Illustrated, Oct 13, 2009
@@ -541,11 +541,11 @@ Language: English<br>Print-length: 614 pages<br>Publisher: Henry Holt and Co.
 <div class="flip-card2">
   <div class="flip-card-inner2">
     <div class="flip-card-front2">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download.jpeg" width="300" height="450">
+      <img src="download.jpeg" width="300" height="450">
     </div>
     <div class="flip-card-back2">
 	 <div class="back-header2">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download.jpeg" width="234" height="216">
+  <img src="download.jpeg" width="234" height="216">
   <div class="back-content2">
   <h1>by J.K. Rowling (Author)</h1>
 Illustrated, July 25, 2017
@@ -569,11 +569,11 @@ Language: English<br>Print-length: 336 pages<br>Reading Age: 9+ years
 <div class="flip-card3">
   <div class="flip-card-inner3">
     <div class="flip-card-front3">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/43f8f3b4ea77b57d42ee861e98714487.jpg_720x720q80.jpg" width="300" height="450">
+      <img src="43f8f3b4ea77b57d42ee861e98714487.jpg_720x720q80.jpg" width="300" height="450">
     </div>
     <div class="flip-card-back3">
 	 <div class="back-header3">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/43f8f3b4ea77b57d42ee861e98714487.jpg_720x720q80.jpg" width="234" height="216">
+  <img src="43f8f3b4ea77b57d42ee861e98714487.jpg_720x720q80.jpg" width="234" height="216">
   <div class="back-content3">
   <h1>by Antoine de Saint-Exupery (Author)</h1>
 Illustrated, May 15, 2000
@@ -597,11 +597,11 @@ Language: English and French<br>Part of series: 1st opart<br>Reading Age: 4+ yea
 <div class="flip-card4">
   <div class="flip-card-inner4">
     <div class="flip-card-front4">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/images.jpeg" width="300" height="450">
+      <img src="images.jpeg" width="300" height="450">
     </div>
     <div class="flip-card-back4">
 	 <div class="back-header4">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/images.jpeg" width="234" height="216">
+  <img src="images.jpeg" width="234" height="216">
   <div class="back-content4">
   <h1>by Stephen King (Author)</h1>
 Illustrated, May 15, 2000
@@ -625,11 +625,11 @@ Language: English<br>#1 Best Seller<br>Supernatural Thrillers
 <div class="flip-card5">
   <div class="flip-card-inner5">
     <div class="flip-card-front5">
-      <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download%20(2).jpeg" width="300" height="450">
+      <img src="download%20(2).jpeg" width="300" height="450">
     </div>
     <div class="flip-card-back5">
 	 <div class="back-header5">
-  <img src="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/download%20(2).jpeg" width="234" height="216">
+  <img src="download%20(2).jpeg" width="234" height="216">
   <div class="back-content5">
   <h1>by Celeste Ng (Author)</h1>
 Publish, Oct 04, 2022
