--- a/delivery.html
+++ b/delivery.html
@@ -12,7 +12,7 @@
 .logo-container {
   width: 100px;
   height: 90px;
-  background-image: url("file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/Screenshot%202023-07-25%20230015.png");
+  background-image: url("Screenshot%202023-07-25%20230015.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -44,7 +44,7 @@
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/original-27257a7db863c5faa12ee855104c4c3f.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("original-27257a7db863c5faa12ee855104c4c3f.jpg");
   height: 70%;
   background-position: center;
   background-repeat: no-repeat;
@@ -171,11 +171,11 @@ position: relative;
     <div class="logo-container"></div><div class="logo">T-Emblemy</div>
        <div class="navbar">
 	   <ul>
-	    <li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/index.html" style="text-decoration:none"><font color="black">HOME</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
-		<li><a href="file:///C:/Users/user/OneDrive/Desktop/t.emblemy.mu.github.io/contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
+	    <li><a href="index.html" style="text-decoration:none"><font color="black">HOME</a></li>
+		<li><a href="book1.html" style="text-decoration:none"><font color="black">BOOK</a></li>
+		<li><a href="19th.html" style="text-decoration:none"><font color="black">19th Century Book</a></li>
+		<li><a href="delivery.html" style="text-decoration:none"><font color="black">Delivery</a></li>
+		<li><a href="contact_us.html"style="text-decoration:none"><font color="black">Contact us</a></li>
 	   </ul>
 	</div>
 	
