--- a/index.html
+++ b/index.html
@@ -354,7 +354,66 @@ img {vertical-align: middle;}
 	position: absolute;
 	right: 192;
 	top: 0px;
-}</style>
+}
+.history{
+	color: #B9770E;
+	font-size: 62px;
+	font-weight: 100px;
+	text-align: center;
+}
+
+.footer {
+  padding: 50px;
+  background-color: #FFF0C5;
+  color: white;
+  font-size: 25px;
+  position: absolute;
+  width: 100%;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-rss {
+  background: #ff6600;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+</style>
 </Head>
 <Body>
  <div class="hero">
