--- a/contact_us.html
+++ b/contact_us.html
@@ -205,7 +205,7 @@
 
 
 .position1{
-	position: block;
+	position: absolute;
 	width: 100%;
     bottom: 45px;
 	left: 50px;
@@ -216,7 +216,7 @@
 	position: absolute;
 	width: 139%;
 	height: 100%;
-	left: 800px;
+	left: 900px;
 	top: 0;
 	display: flex;
 }
